# mitki

./: AGENTS.md  Cargo.toml  LICENSE  README.md  deny.toml  rustfmt.toml
.github/: copilot-instructions.md
.github/workflows/: dependencies.yml  rust.yml
crates/mitki/: Cargo.toml
crates/mitki-analysis/: Cargo.toml
crates/mitki-analysis/src/: arena.rs  ast_map.rs  hir.rs  infer.rs  item.rs  lib.rs  resolver.rs  semantics.rs  ty.rs
crates/mitki-analysis/src/hir/: function.rs  syntax.rs
crates/mitki-analysis/src/item/: scope.rs  tree.rs
crates/mitki-analysis/src/resolver/: scope.rs
crates/mitki-benchmark/: Cargo.toml
crates/mitki-benchmark/benches/: goto_definition.rs  parser.rs  tokenizer.rs
crates/mitki-db/: Cargo.toml
crates/mitki-db/src/: lib.rs
crates/mitki-db/tests/: typeck.rs
crates/mitki-errors/: Cargo.toml
crates/mitki-errors/src/: lib.rs
crates/mitki-hir/: Cargo.toml
crates/mitki-hir-analysis/: Cargo.toml
crates/mitki-hir-macros/: Cargo.toml
crates/mitki-hir-macros/src/: lib.rs
crates/mitki-hir/src/: arena.rs  body.rs  hir.rs  lib.rs  ty.rs
crates/mitki-hir/src/hir/: function.rs  id.rs  schema.rs  store.rs  syntax.rs
crates/mitki-hir/tests/: hir_roundtrip.rs  trybuild.rs
crates/mitki-hir/tests/trybuild/: id_mixup.rs  id_mixup.stderr
crates/mitki-ide/: Cargo.toml
crates/mitki-ide/src/: analysis.rs  lib.rs  server.rs
crates/mitki-ide/src/analysis/: goto_definition.rs
crates/mitki-ide/src/server/: api.rs  notifications.rs  requests.rs
crates/mitki-inputs/: Cargo.toml
crates/mitki-inputs/src/: lib.rs
crates/mitki-lower/: Cargo.toml
crates/mitki-lower/src/: ast_map.rs  hir.rs  lib.rs
crates/mitki-lower/src/hir/: function.rs
crates/mitki-lower/src/item/: scope.rs  tree.rs
crates/mitki-lsp-server/: Cargo.toml
crates/mitki-lsp-server/src/: api.rs  lib.rs  notifications.rs  requests.rs
crates/mitki-parse/: Cargo.toml
crates/mitki-parse/benches/: parse.rs
crates/mitki-parse/src/: grammar.rs  lib.rs  parser.rs  tests.rs
crates/mitki-parse/src/grammar/: expr.rs  exprs.rs  items.rs  types.rs
crates/mitki-parse/test_data/: array_expr.ir  array_expr.mitki  binary_expression_with_prefix_and_postfix.ir  binary_expression_with_prefix_and_postfix.mitki  call_expr.ir  call_expr.mitki  chained_binary_expressions.ir  chained_binary_expressions.mitki  char_literal.ir  char_literal.mitki  closure_params.ir  closure_params.mitki  complex_expression_multiple_binary_operators.ir  complex_expression_multiple_binary_operators.mitki  curly_in_params.ir  curly_in_params.mitki  empty.ir  empty_string_literal.ir  empty_string_literal.mitki  expression_ending_with_binary_operator.ir  expression_ending_with_binary_operator.mitki  expression_missing_operands_binary.ir  expression_numbers_invalid_tokens.ir  expression_numbers_invalid_tokens.mitki  expression_starting_with_closing_parenthesis.ir  expression_starting_with_closing_parenthesis.mitki  expression_with_extra_closing_parenthesis.ir  expression_with_extra_closing_parenthesis.mitki  expression_with_misplaced_parentheses.ir  expression_with_misplaced_parentheses.mitki  function.ir  function.mitki  function_ret_type.ir  function_ret_type.mitki  generic_param_list.ir  generic_param_list.mitki  if_expr.ir  if_expr.mitki  index_expr.ir  index_expr.mitki  (+31 more)
crates/mitki-resolve/: Cargo.toml
crates/mitki-resolve/src/: lib.rs  resolver.rs  scope.rs
crates/mitki-span/: Cargo.toml
crates/mitki-span/src/: lib.rs  symbol.rs
crates/mitki-tokenizer/: Cargo.toml
crates/mitki-tokenizer/src/: cursor.rs  lib.rs
crates/mitki-typeck/: Cargo.toml
crates/mitki-typeck/src/: infer.rs  lib.rs
crates/mitki-yellow/: Cargo.toml
crates/mitki-yellow/src/: ast.rs  builder.rs  cursor.rs  green.rs  lib.rs  maybe_dangling.rs  red.rs  syntax.rs  syntax_kind.rs  syntax_set.rs  trivia.rs
crates/mitki-yellow/src/nodes/: mod.rs  node.rs  token.rs  tree.rs
crates/mitki/src/: db.rs  main.rs
