[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.lints.rust]
unreachable_pub = "warn"
unused_qualifications = "warn"

[workspace.dependencies]
anyhow = "1.0"
camino = "1.1"
mitki-db = { path = "crates/mitki-db" }
mitki-errors = { path = "crates/mitki-errors" }
mitki-ide = { path = "crates/mitki-ide" }
mitki-parse = { path = "crates/mitki-parse" }
mitki-tokenizer = { path = "crates/mitki-tokenizer" }
mitki-yellow = { path = "crates/mitki-yellow" }
salsa = { git = "https://github.com/salsa-rs/salsa/" }
text-size = "1.1"
