[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }
unreachable_pub = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
linkedlist = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
mem_forget = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_value = "warn"
single_match_else = "warn"
string_to_string = "warn"
unused_self = "warn"
unused_trait_names = "warn"
use_self = "warn"

[workspace.dependencies]
anyhow = "1.0"
camino = "1.1"
mitki-analysis = { path = "crates/mitki-analysis" }
mitki-db = { path = "crates/mitki-db" }
mitki-errors = { path = "crates/mitki-errors" }
mitki-ide = { path = "crates/mitki-ide" }
mitki-inputs = { path = "crates/mitki-inputs" }
mitki-lsp-server = { path = "crates/mitki-lsp-server" }
mitki-parse = { path = "crates/mitki-parse" }
mitki-span = { path = "crates/mitki-span" }
mitki-tokenizer = { path = "crates/mitki-tokenizer" }
mitki-yellow = { path = "crates/mitki-yellow" }
salsa = "0.23"
text-size = "1.1"
