[package]
name = "mitki-analysis"
version = "0.1.0"
edition.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
hashbrown = "0.15"
indexmap = "2.6"
mitki-inputs.workspace = true
mitki-parse.workspace = true
mitki-span.workspace = true
mitki-yellow.workspace = true
rustc-hash = "2.0"
salsa.workspace = true
