[package]
name = "mitki-analysis"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
mitki-errors.workspace = true
mitki-hir.workspace = true
mitki-inputs.workspace = true
mitki-lower.workspace = true
mitki-parse.workspace = true
mitki-resolve.workspace = true
mitki-span.workspace = true
mitki-typeck.workspace = true
mitki-yellow.workspace = true
rustc-hash = "2.0"
salsa.workspace = true
