[package]
name = "mitki-benchmark"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[[bench]]
name = "tokenizer"
harness = false

[[bench]]
name = "parser"
harness = false

[dev-dependencies]
codspeed-criterion-compat = { version = "2.7", default-features = false }
mitki-inputs.workspace = true
mitki-parse.workspace = true
mitki-tokenizer.workspace = true
salsa.workspace = true
