[package]
name = "mitki-benchmark"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[lints]
workspace = true

[[bench]]
name = "goto_definition"
harness = false

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "tokenizer"
harness = false

[dev-dependencies]
codspeed-criterion-compat = { version = "4.3", default-features = false }
mitki-ide.workspace = true
mitki-inputs.workspace = true
mitki-parse.workspace = true
mitki-tokenizer.workspace = true
salsa.workspace = true
text-size.workspace = true
