[package]
name = "mitki-db"
version = "0.1.0"
edition.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
camino.workspace = true
mitki-analysis.workspace = true
mitki-errors.workspace = true
mitki-inputs.workspace = true
mitki-parse.workspace = true
mitki-yellow.workspace = true
salsa.workspace = true
