[package]
name = "mitki-hir"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
mitki-span.workspace = true
mitki-hir-macros = { path = "../mitki-hir-macros" }
salsa.workspace = true

[dev-dependencies]
trybuild = "1"
