[package]
name = "mitki-ide"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
crossbeam-channel = "0.5"
lsp-server = "0.7"
lsp-types = "0.97"
mitki-db.workspace = true
mitki-inputs.workspace = true
mitki-parse.workspace = true
mitki-yellow.workspace = true
salsa.workspace = true
serde = "1.0"
serde_json = "1.0"
text-size.workspace = true
