[package]
name = "mitki-ide"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
mitki-analysis.workspace = true
mitki-db.workspace = true
mitki-inputs.workspace = true
mitki-parse.workspace = true
mitki-span.workspace = true
mitki-yellow.workspace = true
salsa.workspace = true
text-size.workspace = true
