[package]
name = "mitki-parse"
version = "0.1.0"
edition.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
drop_bomb = "0.1"
mitki-errors.workspace = true
mitki-inputs.workspace = true
mitki-tokenizer.workspace = true
mitki-yellow.workspace = true
salsa.workspace = true
text-size.workspace = true

[dev-dependencies]
codspeed-criterion-compat = { version = "2.7", default-features = false }
expect-test = "1.5"
