[package]
name = "mitki-typeck"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
mitki-hir.workspace = true
mitki-lower.workspace = true
mitki-resolve.workspace = true
mitki-span.workspace = true
rustc-hash.workspace = true
salsa.workspace = true
