[package]
name = "mitki"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap = { version = "4.5", features = ["derive"] }
mitki-db.workspace = true
mitki-errors.workspace = true
mitki-ide.workspace = true
mitki-yellow.workspace = true
salsa.workspace = true
